sitemap for google

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+
+    <!-- Google description -->
+    <meta name="description" content="Aromatika Front propose une large gamme d'huiles essentielles et végétales pures pour le bien-être, la relaxation, la cosmétique et bien plus. Découvrez nos produits de haute qualité et trouvez la solution adaptée à vos besoins spécifiques." />
+
+    <!-- Google serach -->
+    <meta name="google-site-verification" content="oAk3-X-_Gj89SqFyBvuHAc4ZTQiJffo4W7ybsOon4qw" />
+
+    <!-- Google Mot clés -->
+    <meta name="keywords" content="huiles essentielles, huiles végétales, bien-être, cosmétique, relaxation, aromathérapie, huiles pour sportifs, femmes enceintes, gestion du stress, indexation, référencement" />
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Aromatikä</title>
   </head>
