--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <!-- Google Mot clés -->
     <meta name="keywords" content="huiles essentielles, huiles végétales, bien-être, cosmétique, relaxation, aromathérapie, huiles pour sportifs, femmes enceintes, gestion du stress, indexation, référencement" />
 
+    <meta name="robots" content="index,follow" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Aromatikä</title>
@@ -26,5 +27,5 @@
     <div id="root"></div>
   </body>
 
-  
+
 </html>
