--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
 
     <meta name="robots" content="index,follow" />
 
+    <!-- sitemap -->
+    <link rel="sitemap" type="application/xml" href="%PUBLIC_URL%/sitemap.xml" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Aromatikä</title>
   </head>
