--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="robots" content="index,follow" />
 
     <!-- sitemap -->
-    <link rel="sitemap" type="application/xml" href="%PUBLIC_URL%/sitemap.xml" />
+    <link rel="sitemap" type="application/xml" href="https://aromatika-front.vercel.app/sitemap.xml" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Aromatikä</title>
